--- a/trunk/bin/index.html
+++ b/trunk/bin/index.html
@@ -21,7 +21,7 @@
 		var attributes = {
 			id:"DVSsimulator"
 		};
-		swfobject.embedSWF("DVSsimulator.swf", "altContent", "100%", "100%", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
+		swfobject.embedSWF("DVSsimulator.swf", "altContent", "800", "600", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
 	</script>
 	<style>
 		html, body { height:100%; }
